helloworld-feng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-app-deploy-feng
  labels:
    app: helloworld-app-feng
spec:
  selector:
    matchLabels:
      app: helloworld-app-feng
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld-app-feng
    spec:
      containers:
      - name: helloworld-app-container
        image: "quay.io/dberg1/helloworld:0.0.1"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3002
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          request:
            cpu: 200m
            memory: 256Mi
