helloworld-feng/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: helloworld-app-route-feng
  labels:
    app: helloworld-app-feng
spec:
  to:
    kind: Service
    name: helloworld-app-svc-feng
    weight: 100
  port:
    targetPort: 3002
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
